--- a/stacks/stacks.yaml
+++ b/stacks/stacks.yaml
@@ -1,7 +1,8 @@
 # Example stacks configuration
 # Add your stack definitions here
 
-# Reference the existing stack file
+# Import base component defaults
 import:
+  - catalog/hello-world.yaml
   - local-test-dev.yaml
   - local-prod-live.yaml
