enhance README and workflows: add project structure, key concepts, and quick commands; create deploy and destroy workflows for all environments

--- a/atmos.yaml
+++ b/atmos.yaml
@@ -14,4 +14,11 @@ stacks:
   # Defines how we reference stacks (e.g., atmos terraform apply <component> -s <tenant>-<env>-<stage>)
   name_pattern: "{tenant}-{environment}-{stage}"
   included_paths:
-    - "stacks/"
+    - "local-*.yaml"
+  excluded_paths:
+    - "catalog/**/*"
+    - "stacks.yaml"
+
+# Workflows - reusable command sequences for common operations
+workflows:
+  base_path: "workflows"
